EQ3-fix-bootstrapping : Fix bootstrapping.